2005-07-04  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: infinite loop on date_close with some clients

2005-07-02  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: site purge causing crash
	* bugfix: workaround uid and gid problem in mysql backend
	* feature: all tables renamed to lowercase (mysql) - see
	backends/mysql/UPGRADING for upgrade method

2005-06-29  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: new logging system based on channels
	* feature: new config directive: log_channels_...

2005-06-13  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: missing tagline in mysql and postgresql backends
	* bugfix: use sequences to find uid in initial script (postgresql)
	* feature: support for :port in postgresql backend

2005-06-07  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: missing locks in backend functions
	* bugfix: closed GnuTLS connections properly
	* bugfix: crontab broken
	* feature: work on MLST and MLSD
	* feature: files cache almost restored, now thread-safe
	* feature: merged patch from Chris Middleton to execute PRE_DOWNLOAD
	hook earlier, and allow file cookies to work with this hook.

2005-05-22  Pierre Chifflier  <pollux@wzdftpd.net>

	* First svn commit !
	* bugfix: rename setkey in wzd_crypt to avoid conflict in NetBSD
	* bugfix: send error to log if server can't create pid file
	* bugfix: send error to stderr if server can't open log file
	* bugfix: really disable MLST and MLSD

2005-05-18  Pierre Chifflier  <pollux@wzdftpd.net>

	* --- cvs commit TAG: rel-0-5-3

2005-05-12  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: new logging system, supporting different channels etc.

2005-05-12  Cyprien Laplace <cyprien33@laposte.net>

	* bugfix: usercache invalidation and pointer not updated
	* bugfix: FEAT must return "REST STREAM" to be compliant with
	draft-ietf-ftpext-mlst-16.txt

2005-05-10  Cyprien Laplace <cyprien33@laposte.net>

	* bugfix: race condition on client logging and listing connected clients
